<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/submitterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commenter_name_hint"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/submitorEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commenter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/submitBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/submit_body_hint"
        android:maxLines="4" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/sumbitorImage"
            android:layout_width="48dp"
            android:layout_height="48dp	"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:contentDescription="@string/upload_image_hint"
            android:scaleType="centerInside"
            android:src="@drawable/ic_launcher"
            android:maxHeight="48dp"
            android:maxWidth="48dp" />

        <Button
            android:id="@+id/addImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="40dp"
            android:text="@string/add_image_buton" />

    </RelativeLayout>

</LinearLayout>