<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/commenterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commenter_name_hint"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/commenterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commenter_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/commenterUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/commenter_url_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/commentBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="4"
        android:minLines="4" />

</LinearLayout>